# serial_test

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
infantry/: CMakeLists.txt  main.h  serialBase.cpp  serialBase.h  serialFactory.cpp  serialFactory.h  serialInfantry.cpp  serialInfantry.h  verify.cpp  verify.h
